--- a/OTI Booking Platform/packages.config
+++ b/OTI Booking Platform/packages.config
@@ -30,6 +30,7 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net452" />
+  <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
   <package id="WebHelpers.Mvc5" version="1.0.0" targetFramework="net452" />
 </packages>
