--- a/OTI Booking Platform/OTI Booking Platform.csproj
+++ b/OTI Booking Platform/OTI Booking Platform.csproj
@@ -231,6 +231,10 @@
     </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
+    <Content Include="Content\Bootstrap-Toggle\bootstrap-toggle.css" />
+    <Content Include="Content\Bootstrap-Toggle\bootstrap-toggle.min.css" />
+    <Content Include="Content\Bootstrap-Toggle\bootstrap2-toggle.css" />
+    <Content Include="Content\Bootstrap-Toggle\bootstrap2-toggle.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\DataTables\css\autoFill.bootstrap.css" />
@@ -423,12 +427,18 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="package.json" />
+    <Content Include="Scripts\Bootstrap-Toggle\bootstrap-toggle.js" />
+    <Content Include="Scripts\Bootstrap-Toggle\bootstrap-toggle.min.js" />
+    <Content Include="Scripts\Bootstrap-Toggle\bootstrap2-toggle.js" />
+    <Content Include="Scripts\Bootstrap-Toggle\bootstrap2-toggle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\DataTables\css\semanticui.scss" />
     <Content Include="Content\DataTables\css\mixins.scss" />
     <Content Include="Content\DataTables\css\common.scss" />
     <Content Include="bower.json" />
+    <Content Include="Scripts\Bootstrap-Toggle\bootstrap-toggle.min.js.map" />
+    <Content Include="Scripts\Bootstrap-Toggle\bootstrap2-toggle.min.js.map" />
     <None Include="Scripts\jquery-3.2.1.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
